--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,10 @@
 CLIENT_GATEWAY_PORT=3000
+
+PAYMENTS_MICROSERVICE_PORT=3003
+# https://dashboard.stripe.com/test/apikeys
+STRIPE_SECRET=
+STRIPE_SUCCESS_URL=http://localhost:3003/payments/success
+STRIPE_CANCEL_URL=http://localhost:3003/payments/cancel
+# https://dashboard.stripe.com/test/workbench/webhooks/we_1QwVdt4CgNOOdKFMaLcTHJQ3
+# Este es el signin secret del webhook
+STRIPE_ENDPOINT_SECRET=
