--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,59 +20,73 @@ services:
       - PORT=3000
       - NATS_SERVERS=nats://nats-server:4222
 
-  products-microservice:
-    build: ./products-microservice
-    volumes:
-      - ./products-microservice/src:/usr/src/app/src
-    command: npm run start:dev
-    environment:
-      - PORT=3001
-      - NATS_SERVERS=nats://nats-server:4222
-      - DATABASE_URL=file:./dev.db
-  
-  # ORDERS MS
-  orders-microservice:
-    depends_on:
-      - orders-db
-    build: ./orders-microservice
-    volumes:
-      - ./orders-microservice/src:/usr/src/app/src
-    command: npm run start:dev
-    environment:
-      - PORT=3002
-      - DATABASE_URL=postgresql://postgres:123456@orders-db:5432/ordersdb?schema=public
-      - NATS_SERVERS=nats://nats-server:4222
-
-  
-  # Orders DB
-  orders-db:
-    container_name: orders_database
-    image: postgres:16.2
-    restart: always
-    volumes:
-      - ./orders-microservice/postgres:/var/lib/postgresql/data
-    ports:
-      - 5432:5432
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=123456
-      - POSTGRES_DB=ordersdb
 
 # ================================
-# PAYMENTS MICROSERVICE
+# AUTH MICROSERVICE
 # ================================
-  payments-microservice:
-    container_name: payments-microservice
-    build: ./payments-microservice
+  auth-microservice:
+    build: ./auth-microservice
     volumes:
-      - ./payments-microservice/src:/usr/src/app/src
+      - ./auth-microservice/src:/usr/src/app/src
     command: npm run start:dev
-    ports:
-      - ${PAYMENTS_MICROSERVICE_PORT}:${PAYMENTS_MICROSERVICE_PORT}
     environment:
-      - PORT=${PAYMENTS_MICROSERVICE_PORT}
+      - PORT=3004
       - NATS_SERVERS=nats://nats-server:4222
-      - STRIPE_SECRET=${STRIPE_SECRET}
-      - STRIPE_SUCCESS_URL=${STRIPE_SUCCESS_URL}
-      - STRIPE_CANCEL_URL=${STRIPE_CANCEL_URL}
-      - STRIPE_ENDPOINT_SECRET=${STRIPE_ENDPOINT_SECRET}
+      - DATABASE_URL=${AUTH_DATABASE_URL}
+
+#   products-microservice:
+#     build: ./products-microservice
+#     volumes:
+#       - ./products-microservice/src:/usr/src/app/src
+#     command: npm run start:dev
+#     environment:
+#       - PORT=3001
+#       - NATS_SERVERS=nats://nats-server:4222
+#       - DATABASE_URL=file:./dev.db
+  
+#   # ORDERS MS
+#   orders-microservice:
+#     depends_on:
+#       - orders-db
+#     build: ./orders-microservice
+#     volumes:
+#       - ./orders-microservice/src:/usr/src/app/src
+#     command: npm run start:dev
+#     environment:
+#       - PORT=3002
+#       - DATABASE_URL=postgresql://postgres:123456@orders-db:5432/ordersdb?schema=public
+#       - NATS_SERVERS=nats://nats-server:4222
+
+  
+#   # Orders DB
+#   orders-db:
+#     container_name: orders_database
+#     image: postgres:16.2
+#     restart: always
+#     volumes:
+#       - ./orders-microservice/postgres:/var/lib/postgresql/data
+#     ports:
+#       - 5432:5432
+#     environment:
+#       - POSTGRES_USER=postgres
+#       - POSTGRES_PASSWORD=123456
+#       - POSTGRES_DB=ordersdb
+
+# # ================================
+# # PAYMENTS MICROSERVICE
+# # ================================
+#   payments-microservice:
+#     container_name: payments-microservice
+#     build: ./payments-microservice
+#     volumes:
+#       - ./payments-microservice/src:/usr/src/app/src
+#     command: npm run start:dev
+#     ports:
+#       - ${PAYMENTS_MICROSERVICE_PORT}:${PAYMENTS_MICROSERVICE_PORT}
+#     environment:
+#       - PORT=${PAYMENTS_MICROSERVICE_PORT}
+#       - NATS_SERVERS=nats://nats-server:4222
+#       - STRIPE_SECRET=${STRIPE_SECRET}
+#       - STRIPE_SUCCESS_URL=${STRIPE_SUCCESS_URL}
+#       - STRIPE_CANCEL_URL=${STRIPE_CANCEL_URL}
+#       - STRIPE_ENDPOINT_SECRET=${STRIPE_ENDPOINT_SECRET}
