--- a/.env.template
+++ b/.env.template
@@ -10,3 +10,8 @@ STRIPE_CANCEL_URL=http://localhost:3003/payments/cancel
 STRIPE_ENDPOINT_SECRET=whsec_qP1dgGm7hCaGxTB9gSQTIOWUvKMFKWVh
 
 AUTH_DATABASE_URL=mongodb+srv://***user***:***password***@auth-microservice-db.30wjm.mongodb.net/databaseName
+
+
+JWT_SECRET=b0r1sEstr4d4S4ng4m4
+
+ORDERS_DATABASE_URL=postgresql://neondb_owner:npg_e1sACSu2ONzg@ep-fancy-dust-a5do3w2l-pooler.us-east-2.aws.neon.tech/neondb?sslmode=require
