UPD HEALTH CHECK

--- a/k8s/tienda/templates/payments-microservice/deployment.yml
+++ b/k8s/tienda/templates/payments-microservice/deployment.yml
@@ -18,7 +18,8 @@ spec:
         app: payments-microservice
     spec:
       containers:
-      - image: northamerica-south1-docker.pkg.dev/tienda-microservicios-454219/image-registry/payments-microservice
+      - image: northamerica-south1-docker.pkg.dev/tienda-microservicios-454219/image-registry/payments-microservice:latest
+        imagePullPolicy: Always
         name: payments-microservice
         env:
         - name: PORT
